--- a/Fichas/Tormenta/TRPG/1.lfm
+++ b/Fichas/Tormenta/TRPG/1.lfm
@@ -349,14 +349,14 @@
 	</layout>
 
 	<dataLink fields="{'forca', 'destreza', 'constituicao', 'inteligencia', 'sabedoria', 'carisma', 'ca1', 'ca2', 'ca3', 'ca4', 'ca5', 'fort1', 'fort2', 'fort3', 'ref1', 'ref2', 'ref3', 'von1', 'von2', 'von3', 'acuidade', 'modforca', 'cac1', 'cac2', 'cac3', 'cac4', 'pontaria', 'bba', 'dis1', 'dis2', 'dis3', 'dis4', 'nvclasse1', 'nvclasse2', 'nvclasse3', 'nvclasse4', 'nvclasse5', 'nvclasse6', 'nvclasse7', 'nvclasse8', 'nvclasse9', 'nvclasse10'}">
-		<event name="onChange">
+		<event name="onPersistedChange">
 			-- Calculo de nivel e metade de nivel.
 			if sheet.calculos == false then
 				sheet.nivel = (math.floor((sheet.nvclasse1)or 0)+math.floor((sheet.nvclasse2)or 0)+math.floor((sheet.nvclasse3)or 0)+math.floor((sheet.nvclasse4)or 0)+math.floor((sheet.nvclasse5)or 0)+math.floor((sheet.nvclasse6)or 0)+math.floor((sheet.nvclasse7)or 0)+math.floor((sheet.nvclasse8)or 0)+math.floor((sheet.nvclasse9)or 0)+math.floor((sheet.nvclasse10)or 0));
 				sheet.metadenivel = math.floor(sheet.nivel / 2 or 0);
 			end;
 		</event>
-		<event name="onChange">
+		<event name="onPersistedChange">
 			-- Modificador de Habilidades
 			-- Forca
 			if sheet.calculos == false then
@@ -367,7 +367,7 @@
                 sheet.modforca = modfor;
 			end;
 		</event>
-		<event name="onChange">
+		<event name="onPersistedChange">
 			-- Destreza
 			if sheet.calculos == false then
 				local moddes = math.floor(((sheet.destreza or 10) / 2) - 5);
@@ -377,7 +377,7 @@
                 sheet.moddestreza = moddes;
 			end;
 		</event>
-		<event name="onChange">
+		<event name="onPersistedChange">
 			-- Constituicao
 			if sheet.calculos == false then
 				local modcon = math.floor(((sheet.constituicao or 10) / 2) - 5);
@@ -387,7 +387,7 @@
                 sheet.modconstituicao = modcon;
 			end;
 		</event>
-		<event name="onChange">
+		<event name="onPersistedChange">
 			-- inteligencia
 			if sheet.calculos == false then
 				local modint = math.floor(((sheet.inteligencia or 10) / 2) - 5);
@@ -397,7 +397,7 @@
                 sheet.modinteligencia = modint;
 			end;
 		</event>
-		<event name="onChange">
+		<event name="onPersistedChange">
 			-- Sabedoria
 			if sheet.calculos == false then
 				local modsab = math.floor(((sheet.sabedoria or 10) / 2) - 5);
@@ -407,7 +407,7 @@
                 sheet.modsabedoria = modsab;
 			end;
 		</event>
-		<event name="onChange">
+		<event name="onPersistedChange">
 			-- Carisma
 			if sheet.calculos == false then
 				local modcar = math.floor(((sheet.carisma or 10) / 2) - 5);
@@ -417,7 +417,7 @@
                 sheet.modcarisma = modcar;
 			end;
 		</event>
-		<event name="onChange">
+		<event name="onPersistedChange">
 			-- Classe de Armadura
 			if sheet.calculos == false then
 				sheet.ca2 = sheet.moddestreza;
@@ -425,7 +425,7 @@
 				sheet.totalca = (math.floor((sheet.ca1)or 0)+math.floor((sheet.ca2)or 0)+math.floor((sheet.ca3)or 0)+math.floor((sheet.ca4)or 0)+math.floor((sheet.ca5)or 0));
 			end;
 		</event>
-		<event name="onChange">
+		<event name="onPersistedChange">
 			-- Fortitude
 			if sheet.calculos == false then
 				sheet.fort2 = sheet.modconstituicao;
@@ -433,7 +433,7 @@
 				sheet.totalfort = (math.floor((sheet.fort1)or 0)+math.floor((sheet.fort2)or 0)+math.floor((sheet.fort3)or 0));
 			end;
 		</event>
-		<event name="onChange">
+		<event name="onPersistedChange">
 			-- Reflexo
 			if sheet.calculos == false then
 				sheet.ref2 = sheet.moddestreza;
@@ -441,7 +441,7 @@
 				sheet.totalref = (math.floor((sheet.ref1)or 0)+math.floor((sheet.ref2)or 0)+math.floor((sheet.ref3)or 0));
 			end;
 		</event>
-		<event name="onChange">
+		<event name="onPersistedChange">
 			-- Vontade
 			if sheet.calculos == false then
 				sheet.von2 = sheet.modsabedoria;
@@ -449,7 +449,7 @@
 				sheet.totalvon = (math.floor((sheet.von1)or 0)+math.floor((sheet.von2)or 0)+math.floor((sheet.von3)or 0));
 			end;
 		</event>
-		<event name="onChange">
+		<event name="onPersistedChange">
 			-- Corpo a corpo
 			if sheet.calculos == false then
 				if sheet.acuidade then
@@ -461,7 +461,7 @@
 				sheet.totalcac = (math.floor((sheet.cac1)or 0)+math.floor((sheet.cac2)or 0)+math.floor((sheet.cac3)or 0)+math.floor((sheet.cac4)or 0));
 			end;
 		</event>
-		<event name="onChange">
+		<event name="onPersistedChange">
 			-- Ataque a distancia.
 			if sheet.calculos == false then
 				if sheet.pontaria then
