--- a/Fichas/Tormenta/TRPG/2.lfm
+++ b/Fichas/Tormenta/TRPG/2.lfm
@@ -375,7 +375,7 @@
 		
 	</scrollBox>
 	<dataLink fields="{'outrosacrobacia', 'outrosadestrar', 'outrosatletismo', 'outrosatuacao1', 'outrosatuacao2', 'outroscavalgar', 'outrosconhecimento1', 'outrosconhecimento2', 'outroscura', 'outrosdiplomacia', 'outrosenganacao', 'outrosfurtividade', 'outrosimagia', 'outrosiniciativa', 'outrosintimidacao', 'outrosintuicao', 'outrosladinagem', 'outrosoinformacao', 'outrosoficio1', 'outrosoficio2', 'outrospercepcao', 'outrossobrevivencia', 'cbxacrobacia', 'cbxadestrar', 'cbxatletismo', 'cbxatuacao1', 'cbxatuacao2', 'cbxcavalgar', 'cbxconhecimento1', 'cbxconhecimento2', 'cbxcura', 'cbxdiplomacia', 'cbxenganacao', 'cbxfurtividade', 'cbximagia', 'cbxiniciativa', 'cbxintimidacao', 'cbxintuicao', 'cbxladinagem', 'cbxoinformacao', 'cbxoficio1', 'cbxoficio2', 'cbxpercepcao', 'cbxsobrevivencia', 'forca', 'modforca', 'destreza', 'moddestreza', 'constituicao', 'modconstituicao', 'inteligencia', 'modinteligencia', 'sabedoria', 'modsabedoria', 'carisma', 'modcarisma', 'nivel'}">
-		<event name="onChange">
+		<event name="onPersistedChange">
 			if sheet.calculos == false then
 				sheet.modacrobacia = sheet.moddestreza or 0;
 				if self.cbxacrobacia.checked then
@@ -385,6 +385,10 @@
 					sheet.gradacrobacia = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalacrobacia = (math.floor((sheet.gradacrobacia)or 0)+math.floor((sheet.modacrobacia) or 0)+math.floor((sheet.outrosacrobacia)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modadestrar = sheet.modcarisma or 0;
 				if self.cbxadestrar.checked then
 					sheet.gradadestrar = (math.floor((sheet.nivel)+3 or 0));
@@ -393,6 +397,10 @@
 					sheet.gradadestrar = (math.floor((sheet.metadenivel)or 0));
 					sheet.totaladestrar = (math.floor((sheet.gradadestrar)or 0)+math.floor((sheet.modadestrar) or 0)+math.floor((sheet.outrosadestrar)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modatletismo = sheet.modforca or 0;
 				if self.cbxatletismo.checked then
 					sheet.gradatletismo = (math.floor((sheet.nivel)+3 or 0));
@@ -401,6 +409,10 @@
 					sheet.gradatletismo = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalatletismo = (math.floor((sheet.gradatletismo)or 0)+math.floor((sheet.modatletismo) or 0)+math.floor((sheet.outrosatletismo)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modatuacao1 = sheet.modcarisma or 0;
 				if self.cbxatuacao1.checked then
 					sheet.gradatuacao1 = (math.floor((sheet.nivel)+3 or 0));
@@ -409,6 +421,10 @@
 					sheet.gradatuacao1 = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalatuacao1 = (math.floor((sheet.gradatuacao1)or 0)+math.floor((sheet.modatuacao1) or 0)+math.floor((sheet.outrosatuacao1)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modatuacao2 = sheet.modcarisma or 0;
 				if self.cbxatuacao2.checked then
 					sheet.gradatuacao2 = (math.floor((sheet.nivel)+3 or 0));
@@ -417,6 +433,10 @@
 					sheet.gradatuacao2 = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalatuacao2 = (math.floor((sheet.gradatuacao2)or 0)+math.floor((sheet.modatuacao2) or 0)+math.floor((sheet.outrosatuacao2)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modcavalgar = sheet.moddestreza or 0;
 				if self.cbxcavalgar.checked then
 					sheet.gradcavalgar = (math.floor((sheet.nivel)+3 or 0));
@@ -425,6 +445,10 @@
 					sheet.gradcavalgar = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalcavalgar = (math.floor((sheet.gradcavalgar)or 0)+math.floor((sheet.modcavalgar) or 0)+math.floor((sheet.outroscavalgar)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modconhecimento1 = sheet.modinteligencia or 0;
 				if self.cbxconhecimento1.checked then
 					sheet.gradconhecimento1 = (math.floor((sheet.nivel)+3 or 0));
@@ -433,6 +457,10 @@
 					sheet.gradconhecimento1 = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalconhecimento1 = (math.floor((sheet.gradconhecimento1)or 0)+math.floor((sheet.modconhecimento1) or 0)+math.floor((sheet.outrosconhecimento1)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modconhecimento2 = sheet.modinteligencia or 0;
 				if self.cbxconhecimento2.checked then
 					sheet.gradconhecimento2 = (math.floor((sheet.nivel)+3 or 0));
@@ -441,6 +469,10 @@
 					sheet.gradconhecimento2 = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalconhecimento2 = (math.floor((sheet.gradconhecimento2)or 0)+math.floor((sheet.modconhecimento2) or 0)+math.floor((sheet.outrosconhecimento2)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modcura = sheet.modsabedoria or 0;
 				if self.cbxcura.checked then
 					sheet.gradcura = (math.floor((sheet.nivel)+3 or 0));
@@ -449,6 +481,10 @@
 					sheet.gradcura = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalcura = (math.floor((sheet.gradcura)or 0)+math.floor((sheet.modcura) or 0)+math.floor((sheet.outroscura)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.moddiplomacia = sheet.modcarisma or 0;
 				if self.cbxdiplomacia.checked then
 					sheet.graddiplomacia = (math.floor((sheet.nivel)+3 or 0));
@@ -457,6 +493,10 @@
 					sheet.graddiplomacia = (math.floor((sheet.metadenivel)or 0));
 					sheet.totaldiplomacia = (math.floor((sheet.graddiplomacia)or 0)+math.floor((sheet.moddiplomacia) or 0)+math.floor((sheet.outrosdiplomacia)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modenganacao = sheet.modcarisma or 0;
 				if self.cbxenganacao.checked then
 					sheet.gradenganacao = (math.floor((sheet.nivel)+3 or 0));
@@ -465,6 +505,10 @@
 					sheet.gradenganacao = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalenganacao = (math.floor((sheet.gradenganacao)or 0)+math.floor((sheet.modenganacao) or 0)+math.floor((sheet.outrosenganacao)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modfurtividade = sheet.moddestreza or 0;
 				if self.cbxfurtividade.checked then
 					sheet.gradfurtividade = (math.floor((sheet.nivel)+3 or 0));
@@ -473,6 +517,10 @@
 					sheet.gradfurtividade = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalfurtividade = (math.floor((sheet.gradfurtividade)or 0)+math.floor((sheet.modfurtividade) or 0)+math.floor((sheet.outrosfurtividade)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modimagia = sheet.modinteligencia or 0;
 				if self.cbximagia.checked then
 					sheet.gradimagia = (math.floor((sheet.nivel)+3 or 0));
@@ -481,6 +529,10 @@
 					sheet.gradimagia = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalimagia = (math.floor((sheet.gradimagia)or 0)+math.floor((sheet.modimagia) or 0)+math.floor((sheet.outrosimagia)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modiniciativa = sheet.moddestreza or 0;
 				if self.cbxiniciativa.checked then
 					sheet.gradiniciativa = (math.floor((sheet.nivel)+3 or 0));
@@ -489,6 +541,10 @@
 					sheet.gradiniciativa = (math.floor((sheet.metadenivel)or 0));
 					sheet.totaliniciativa = (math.floor((sheet.gradiniciativa)or 0)+math.floor((sheet.modiniciativa) or 0)+math.floor((sheet.outrosiniciativa)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modintimidacao = sheet.modcarisma or 0;
 				if self.cbxintimidacao.checked then
 					sheet.gradintimidacao = (math.floor((sheet.nivel)+3 or 0));
@@ -497,6 +553,10 @@
 					sheet.gradintimidacao = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalintimidacao = (math.floor((sheet.gradintimidacao)or 0)+math.floor((sheet.modintimidacao) or 0)+math.floor((sheet.outrosintimidacao)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modintuicao = sheet.modsabedoria or 0;
 				if self.cbxintuicao.checked then
 					sheet.gradintuicao = (math.floor((sheet.nivel)+3 or 0));
@@ -505,6 +565,10 @@
 					sheet.gradintuicao = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalintuicao = (math.floor((sheet.gradintuicao)or 0)+math.floor((sheet.modintuicao) or 0)+math.floor((sheet.outrosintuicao)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modladinagem = sheet.moddestreza or 0;
 				if self.cbxladinagem.checked then
 					sheet.gradladinagem = (math.floor((sheet.nivel)+3 or 0));
@@ -513,6 +577,10 @@
 					sheet.gradladinagem = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalladinagem = (math.floor((sheet.gradladinagem)or 0)+math.floor((sheet.modladinagem) or 0)+math.floor((sheet.outrosladinagem)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modoinformacao = sheet.modcarisma or 0;
 				if self.cbxoinformacao.checked then
 					sheet.gradoinformacao = (math.floor((sheet.nivel)+3 or 0));
@@ -521,6 +589,10 @@
 					sheet.gradoinformacao = (math.floor((sheet.metadenivel)or 0));
 					sheet.totaloinformacao = (math.floor((sheet.gradoinformacao)or 0)+math.floor((sheet.modoinformacao) or 0)+math.floor((sheet.outrosoinformacao)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modoficio1 = sheet.modinteligencia or 0;
 				if self.cbxoficio1.checked then
 					sheet.gradoficio1 = (math.floor((sheet.nivel)+3 or 0));
@@ -529,6 +601,10 @@
 					sheet.gradoficio1 = (math.floor((sheet.metadenivel)or 0));
 					sheet.totaloficio1 = (math.floor((sheet.gradoficio1)or 0)+math.floor((sheet.modoficio1) or 0)+math.floor((sheet.outrosoficio1)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modoficio2 = sheet.modinteligencia or 0;
 				if self.cbxoficio2.checked then
 					sheet.gradoficio2 = (math.floor((sheet.nivel)+3 or 0));
@@ -537,6 +613,10 @@
 					sheet.gradoficio2 = (math.floor((sheet.metadenivel)or 0));
 					sheet.totaloficio2 = (math.floor((sheet.gradoficio2)or 0)+math.floor((sheet.modoficio2) or 0)+math.floor((sheet.outrosoficio2)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modpercepcao = sheet.modsabedoria or 0;
 				if self.cbxpercepcao.checked then
 					sheet.gradpercepcao = (math.floor((sheet.nivel)+3 or 0));
@@ -545,6 +625,10 @@
 					sheet.gradpercepcao = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalpercepcao = (math.floor((sheet.gradpercepcao)or 0)+math.floor((sheet.modpercepcao) or 0)+math.floor((sheet.outrospercepcao)or 0));
 				end;
+			end;
+		</event>
+		<event name="onPersistedChange">
+			if sheet.calculos == false then
 				sheet.modsobrevivencia = sheet.modsabedoria or 0;
 				if self.cbxsobrevivencia.checked then
 					sheet.gradsobrevivencia = (math.floor((sheet.nivel)+3 or 0));
@@ -553,7 +637,6 @@
 					sheet.gradsobrevivencia = (math.floor((sheet.metadenivel)or 0));
 					sheet.totalsobrevivencia = (math.floor((sheet.gradsobrevivencia)or 0)+math.floor((sheet.modsobrevivencia) or 0)+math.floor((sheet.outrossobrevivencia)or 0));
 				end;
-				
 			end;
 		</event>
 	</dataLink>
